return imagemin & webp plugins, optimize loading speed

--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
 		<header class="header">
       <div class="header__wrapper">
         <a class="header__logo">
-          <img src="images/logo.png" width="60" height="60" alt="Mitoshi CryptoLotto ICO"
-               title="Mitoshi CryptoLotto ICO">
+          <picture>
+            <source srcset="images/logo.webp" width="60" height="60" type="image/webp">
+            <source srcset="images/logo.png" width="60" height="60" type="image/png">
+            <img src="images/logo.png" width="60" height="60" alt="Mitoshi CryptoLotto ICO" title="Mitoshi CryptoLotto ICO">
+          </picture>
         </a>
         <button class="header__toggle"></button>
         <div class="dropdown header__language">
@@ -170,7 +173,7 @@
                     <img src="images/rating/top-token-sales.svg" alt="TopTokenSale">
                   </dt>
                   <dd>
-                    <img src="images/rating/rated-star-40.png" alt="Rating">
+                    <img src="images/rating/rated-star-30.png" alt="Rating">
                     <p>3,0</p>
                   </dd>
                 </dl>
@@ -618,21 +621,33 @@
             <ul class="team__list team__list--executive">
               <li class="team__list-item team__list-item--executive">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/tc-picardo-8917a8165/" target="_blank">
-                  <img src="images/team-1.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-1.webp" type="image/webp">
+                    <source srcset="images/team-1.png" type="image/png">
+                    <img src="images/team-1.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">TC Picardo</p>
                 <p class="team__member-occup">CEO & Founder</p>
               </li>
               <li class="team__list-item team__list-item--executive">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/normanvelasco/" target="_blank">
-                  <img src="images/team-2.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-2.webp" type="image/webp">
+                    <source srcset="images/team-2.png" type="image/png">
+                    <img src="images/team-2.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Norman Velasco</p>
                 <p class="team__member-occup">COO & Co-Founder</p>
               </li>
               <li class="team__list-item team__list-item--executive">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/rob-natthavong-jumchai-1a4067172/" target="_blank">
-                  <img src="images/team-5.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-5.webp" type="image/webp">
+                    <source srcset="images/team-5.png" type="image/png">
+                    <img src="images/team-5.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Robert Natthavong Jumchai</p>
                 <p class="team__member-occup">
@@ -641,7 +656,11 @@
               </li>
               <li class="team__list-item team__list-item--executive">
                 <a class="team__img-wrap" href="#" target="_blank">
-                  <img src="images/team-6.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-6.webp" type="image/webp">
+                    <source srcset="images/team-6.png" type="image/png">
+                    <img src="images/team-6.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Charles Greenwood</p>
                 <p class="team__member-occup">
@@ -650,7 +669,11 @@
               </li>
               <li class="team__list-item team__list-item--management">
                 <a class="team__img-wrap" href="#" target="_blank">
-                  <img src="images/team-7.jpg" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-7.webp" type="image/webp">
+                    <source srcset="images/team-7.jpg" type="image/jpeg">
+                    <img src="images/team-7.jpg" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Jocelyn Peralta</p>
                 <p class="team__member-occup">
@@ -667,28 +690,44 @@
             <ul class="team__list team__list--development">
               <li class="team__list-item team__list-item--development">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/sergey-provalinski-0b8204162/" target="_blank">
-                  <img src="images/team-9.jpg" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-9.webp" type="image/webp">
+                    <source srcset="images/team-9.jpg" type="image/jpeg">
+                    <img src="images/team-9.jpg" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Sergey Provalinski</p>
                 <p class="team__member-occup">Front-end Developer</p>
               </li>
               <li class="team__list-item team__list-item--development">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/%D0%B0%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80-%D0%BF%D0%BE%D0%B4%D1%80%D0%B5%D0%B7%D0%BE%D0%B2-b3328a173/" target="_blank">
-                  <img src="images/team-10.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-10.webp" type="image/webp">
+                    <source srcset="images/team-10.png" type="image/png">
+                    <img src="images/team-10.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Alexander Podrezov</p>
                 <p class="team__member-occup">Back-end Developer</p>
               </li>
               <li class="team__list-item team__list-item--development">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/blockchainwork/" target="_blank">
-                  <img src="images/team-11.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-11.webp" type="image/webp">
+                    <source srcset="images/team-11.png" type="image/png">
+                    <img src="images/team-11.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Kalinouski Konstantin</p>
                 <p class="team__member-occup">Protocol Architect</p>
               </li>
               <li class="team__list-item team__list-item--development">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/julia-drobnitsa/" target="_blank">
-                  <img src="images/team-12.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-12.webp" type="image/webp">
+                    <source srcset="images/team-12.png" type="image/png">
+                    <img src="images/team-12.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Julia Drobnitsa</p>
                 <p class="team__member-occup">UX / IU Designer</p>
@@ -711,7 +750,11 @@
               <!--</li>-->
               <li class="team__list-item team__list-item--pr">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/jerickalcancia/" target="_blank">
-                  <img src="images/team-14.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-14.webp" type="image/webp">
+                    <source srcset="images/team-14.png" type="image/png">
+                    <img src="images/team-14.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Jerick Alcancia</p>
                 <p class="team__member-occup">Motion Graphic Artist</p>
@@ -725,7 +768,11 @@
               <!--</li>-->
               <li class="team__list-item team__list-item--pr">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/rmcccos/" target="_blank">
-                  <img src="images/team-16.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-16.webp" type="image/webp">
+                    <source srcset="images/team-16.png" type="image/png">
+                    <img src="images/team-16.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Rowena Ma. Clara Cos</p>
                 <p class="team__member-occup">Copywriter</p>
@@ -763,70 +810,105 @@
             <ul class="team__list team__list--media">
               <li class="team__list-item team__list-item--media">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/kashif-syed-b09003139/" target="_blank">
-                  <img src="images/team-17.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-17.webp" type="image/webp">
+                    <source srcset="images/team-17.png" type="image/png">
+                    <img src="images/team-17.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Kashif Syed</p>
                 <p class="team__member-occup">Social Media Management</p>
               </li>
               <li class="team__list-item team__list-item--media">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/raizalyn-razo/" target="_blank">
-                  <img src="images/team-18.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-18.webp" type="image/webp">
+                    <source srcset="images/team-18.png" type="image/png">
+                    <img src="images/team-18.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Raizalyn Razo</p>
                 <p class="team__member-occup">Community Management</p>
               </li>
               <li class="team__list-item team__list-item--media">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/celeste-paras-79947b6a/" target="_blank">
-                  <img src="images/team-19.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-19.webp" type="image/webp">
+                    <source srcset="images/team-19.png" type="image/png">
+                    <img src="images/team-19.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Celeste Paras</p>
                 <p class="team__member-occup">Community Management (English)</p>
               </li>
               <li class="team__list-item team__list-item--media">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/chen-chee-fah-783110142/" target="_blank">
-                  <img src="images/team-20.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-20.webp" type="image/webp">
+                    <source srcset="images/team-20.png" type="image/png">
+                    <img src="images/team-20.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Chen Chee Fah</p>
                 <p class="team__member-occup">Community Management (Mandarin)</p>
               </li>
               <li class="team__list-item team__list-item--media">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/awele-kimberly-ajiduah-8981a075/" target="_blank">
-                  <img src="images/team-22.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-22.webp" type="image/webp">
+                    <source srcset="images/team-22.png" type="image/png">
+                    <img src="images/team-22.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Awele Kimberly Ajiduah</p>
                 <p class="team__member-occup">Content Management</p>
               </li>
               <li class="team__list-item team__list-item--media">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/hazel-olivar-58ba23133/" target="_blank">
-                  <img src="images/team-24.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-24.webp" type="image/webp">
+                    <source srcset="images/team-24.png" type="image/png">
+                    <img src="images/team-24.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Hazel Olivar</p>
                 <p class="team__member-occup">Community Management</p>
               </li>
               <li class="team__list-item team__list-item--media">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/philip-smart-43898b169/" target="_blank">
-                  <img src="images/team-23.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-23.webp" type="image/webp">
+                    <source srcset="images/team-23.png" type="image/png">
+                    <img src="images/team-23.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Philip Smart Kolawole</p>
                 <p class="team__member-occup">Community Management</p>
               </li>
               <li class="team__list-item team__list-item--media">
                 <a class="team__img-wrap" href=https://www.linkedin.com/in/kris-manalo-793173175/" target="_blank">
-                  <img src="images/team-27.jpg" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-27.webp" type="image/webp">
+                    <source srcset="images/team-27.jpg" type="image/jpeg">
+                    <img src="images/team-27.jpg" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Kris Manalo</p>
                 <p class="team__member-occup">Community Management</p>
               </li>
               <li class="team__list-item team__list-item--media">
                 <a class="team__img-wrap" href=https://www.linkedin.com/in/geneva-padua-b93646b1/" target="_blank">
-                  <img src="images/team-28.jpg" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-28.webp" type="image/webp">
+                    <source srcset="images/team-28.jpg" type="image/jpeg">
+                    <img src="images/team-28.jpg" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Geneva Padua</p>
                 <p class="team__member-occup">Community Management</p>
               </li>
             </ul>
           </div>
-
           <div class="team__block">
             <h4 class="team__subtitle">
               Advisors
@@ -834,14 +916,22 @@
             <ul class="team__list team__list--advisors">
               <li class="team__list-item team__list-item--advisors">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/nikita-melnikov-a71a06b8/" target="_blank">
-                  <img src="images/team-3.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-3.webp" type="image/webp">
+                    <source srcset="images/team-3.png" type="image/png">
+                    <img src="images/team-3.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Nikita Melnikov</p>
                 <p class="team__member-occup">Blockchain & Smart Contract Advisor</p>
               </li>
               <li class="team__list-item team__list-item--advisors">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/kim-zafra-el-jugador-53393037/" target="_blank">
-                  <img src="images/team-4.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/team-4.webp" type="image/webp">
+                    <source srcset="images/team-4.png" type="image/png">
+                    <img src="images/team-4.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Kim Zafra</p>
                 <p class="team__member-occup">Technical Game Advisor / Game Mathematecian</p>
@@ -876,7 +966,6 @@
               <!--</li>-->
             </ul>
           </div>
-
           <div class="team__block">
             <h4 class="team__subtitle">
               Partners
@@ -884,7 +973,11 @@
             <ul class="team__list team__list--partners">
               <li class="team__list-item team__list-item--partners">
                 <a class="team__img-wrap team__img-wrap--partners" href="https://loftchain.io/" target="_blank">
-                  <img src="images/partner-1.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/partner-1.webp" type="image/webp">
+                    <source srcset="images/partner-1.png" type="image/png">
+                    <img src="images/partner-1.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Loftchain</p>
                 <p class="team__member-occup">Technical Partners</p>
@@ -898,7 +991,11 @@
               <!--</li>-->
               <li class="team__list-item team__list-item--partners">
                 <a class="team__img-wrap team__img-wrap--partners team__img-wrap--partners-shrink" href="https://www.experfy.com/" target="_blank">
-                  <img src="images/partner-3.png" alt="Member of Mithoshi Team">
+                  <picture>
+                    <source srcset="images/partner-3.webp" type="image/webp">
+                    <source srcset="images/partner-3.png" type="image/jpeg">
+                    <img src="images/partner-3.png" alt="Member of Mithoshi Team">
+                  </picture>
                 </a>
                 <p class="team__member-name">Experfy</p>
               </li>
