--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <section class="about" id="about">
           <ul class="about__rating-list">
             <li class="about__rating-item">
-              <a href="https://icobench.com/ico/mitoshi" class="about__rating-link">
+              <a href="https://icobench.com/ico/mitoshi" class="about__rating-link" target="_blank">
                 <dl>
                   <dt>
                     <img src="images/rating/ico-bench.png" alt="ICO-Bench">
@@ -141,7 +141,7 @@
               </a>
             </li>
             <li class="about__rating-item">
-              <a href="https://icoholder.com/en/mitoshi-27603" class="about__rating-link">
+              <a href="https://icoholder.com/en/mitoshi-27603" class="about__rating-link" target="_blank">
                 <dl>
                   <dt>
                     <img src="images/rating/ico-holder.svg" alt="ICO-Holder">
@@ -154,7 +154,7 @@
               </a>
             </li>
             <li class="about__rating-item">
-              <a href="https://ico.coincheckup.com/mitoshi/" class="about__rating-link">
+              <a href="https://ico.coincheckup.com/mitoshi/" class="about__rating-link" target="_blank">
                 <dl>
                   <dt>
                     <img src="images/rating/coin-check-up.png" alt="CoinCheckUp">
@@ -167,7 +167,7 @@
               </a>
             </li>
             <li class="about__rating-item">
-              <a href="http://toptokensales.com/?s=Mitoshi" class="about__rating-link">
+              <a href="http://toptokensales.com/?s=Mitoshi" class="about__rating-link" target="_blank">
                 <dl>
                   <dt>
                     <img src="images/rating/top-token-sales.svg" alt="TopTokenSale">
@@ -180,7 +180,7 @@
               </a>
             </li>
             <li class="about__rating-item">
-              <a href="https://icomarks.com/search?q=Mitoshi" class="about__rating-link">
+              <a href="https://icomarks.com/search?q=Mitoshi" class="about__rating-link" target="_blank">
                 <dl>
                   <dt>
                     <img src="images/rating/ico-marks.png" alt="ICOMarks">
